--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sample",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -8,7 +8,8 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "release": "standard-version"
+    "release": "standard-version",
+    "build:prod": "ng build --target production --build-optimizer --vendor-chunk"
   },
   "private": true,
   "dependencies": {
